--- a/src/styles/MyMedications.css
+++ b/src/styles/MyMedications.css
@@ -1,8 +1,14 @@
 .medication-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  margin: 0 auto;
+  justify-content: space-between;
+  gap: 1rem;
+  margin: 2rem auto;
   width: 100%;
+}
+
+.card-container {
+    display: flex;
+    flex-direction: row;
 }
