--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -7,7 +7,8 @@
     color: #fff;
     padding: 1rem;
     font-family: 'Montserrat', sans-serif;
-    height: 1.8rem;
+    height: 3rem;
+    border-radius: 1%;
   }
 
   .navbar-container {
@@ -24,7 +25,7 @@
   }
 
    .logo {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     color: #fff;
     text-decoration: none;
     margin-left: -1rem ;
@@ -38,7 +39,7 @@
   }
 
   .nav-links a {
-    font-size: 1rem;
+    font-size: 1.1rem;
     color: #fff;
     text-decoration: none;
   }
